--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="header__avatar__logo-container">
+        <img
+          class="header__avatar__logo"
+          src="./images/avatar.jpg"
+          alt="avatar"
+        />
+      </div>
+    </header>
+  </body>
 </html>
