feat/CHAR-5: added intro heading with styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
+
   <body>
     <header class="header">
       <div class="header__avatar__logo-container">
@@ -14,6 +15,14 @@
           src="./images/avatar.jpg"
           alt="avatar"
         />
+      </div>
+
+      <div class="header__heading--container">
+        <h1 class="heading-primary">
+          <span class="heading-primary--main">portfolio app</span>
+          <span class="heading-primary--sub--1">with</span>
+          <span class="heading-primary--sub--2">html &#38; scss</span>
+        </h1>
       </div>
     </header>
   </body>
