feat/CHAR-6: added button el with styles & animation

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
@@ -23,6 +29,10 @@
           <span class="heading-primary--sub--1">with</span>
           <span class="heading-primary--sub--2">html &#38; scss</span>
         </h1>
+
+        <a class="btn btn--white btn--animated" href="#"
+          >Discover my tech stack
+        </a>
       </div>
     </header>
   </body>
