feat/CHAR-8: added projects section with related styles, images

--- a/index.html
+++ b/index.html
@@ -36,4 +36,66 @@
       </div>
     </header>
   </body>
+
+  <main>
+    <section class="section-projects">
+      <div class="u-center-text u-margin-bottom-big">
+        <h2 class="heading-secondary">projects i worked on</h2>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-2">
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Personal projects I worked on
+          </h3>
+
+          <p class="paragraph">
+            Take a look at some of the project that I've built
+          </p>
+
+          <h3 class="heading-tertiary u-margin-bottom-small">Technologies</h3>
+
+          <p class="paragraph">
+            <span class="span-technologies u-margin-bottom-small">
+              JavaScript, React.js, HTML & CSS, Material UI, Bootstrap, Tailwind
+              CSS, Node.js, Express.js, Mongoose ...
+            </span>
+
+            <span class="heading-tertiary">... and much more! </span>
+          </p>
+          <a href="https://github.com/iskren97" target="_blank" class="btn-text"
+            >Learn more &rarr;</a
+          >
+        </div>
+
+        <div class="col-1-of-2">
+          <div class="project-preview">
+            <img
+              src="images/3.png"
+              alt="Photo 1"
+              class="project-preview__photo project-preview__photo--p1"
+            />
+
+            <img
+              src="images/1.png"
+              alt="Photo 2"
+              class="project-preview__photo project-preview__photo--p2"
+            />
+
+            <img
+              src="images/2.png"
+              alt="Photo 3"
+              class="project-preview__photo project-preview__photo--p3"
+            />
+
+            <img
+              src="images/4.png"
+              alt="Photo 4"
+              class="project-preview__photo project-preview__photo--p4"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </html>
