feat/CHAR-9: added about section with corresponding elements, styles, icons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
 
+    <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
@@ -46,7 +47,7 @@
       <div class="row">
         <div class="col-1-of-2">
           <h3 class="heading-tertiary u-margin-bottom-small">
-            Personal projects I worked on
+            Personal projects
           </h3>
 
           <p class="paragraph">
@@ -93,6 +94,60 @@
               alt="Photo 4"
               class="project-preview__photo project-preview__photo--p4"
             />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-about">
+      <h1 class="heading-about u-margin-bottom-big">I enjoy</h1>
+
+      <div class="row">
+        <div class="col-1-of-4">
+          <div class="about-box">
+            <i class="about-box__icon icon-basic-world"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Lorem</h3>
+            <p class="about-box__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+              saepe nesciunt quidem rem suscipit ipsum dolores assumenda tempora
+              laudantium
+            </p>
+          </div>
+        </div>
+
+        <div class="col-1-of-4">
+          <div class="about-box">
+            <i class="about-box__icon icon-basic-share"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Sharing</h3>
+            <p class="about-box__text">
+              As part of a team, I value trust and cooperation. Sharing
+              knowledge and learning from my colleagues brings me joy.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-1-of-4">
+          <div class="about-box">
+            <i class="about-box__icon icon-basic-map"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Learning</h3>
+            <p class="about-box__text">
+              I am committed to ongoing learning and constantly seek ways to
+              enhance my skills and stay current on the latest technologies.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-1-of-4">
+          <div class="about-box">
+            <i class="about-box__icon icon-basic-heart"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Staying Healthy
+            </h3>
+            <p class="about-box__text">
+              I prioritize continuous self-improvement and well-being. I also
+              value a healthy lifestyle as it directly contributes to my
+              productivity at work.
+            </p>
           </div>
         </div>
       </div>
