--- a/index.html
+++ b/index.html
@@ -105,12 +105,11 @@
       <div class="row">
         <div class="col-1-of-4">
           <div class="about-box">
-            <i class="about-box__icon icon-basic-world"></i>
-            <h3 class="heading-tertiary u-margin-bottom-small">Lorem</h3>
+            <i class="about-box__icon icon-basic-laptop"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Coding</h3>
             <p class="about-box__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-              saepe nesciunt quidem rem suscipit ipsum dolores assumenda tempora
-              laudantium
+              I bring a deep passion for programming that allows me to be
+              proficient in writing clear, accurate, and easy-to-maintain code.
             </p>
           </div>
         </div>
