--- a/index.html
+++ b/index.html
@@ -151,5 +151,121 @@
         </div>
       </div>
     </section>
+
+    <section class="section-technologies">
+      <div class="u-center-text u-margin-bottom-big">
+        <h2 class="heading-secondary">Technical Skills</h2>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--1">&nbsp;</div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--1"
+                  >Front-End</span
+                >
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>JavaScript (ES6+)</li>
+                  <li>TypeScript</li>
+                  <li>HTML5</li>
+                  <li>CSS3</li>
+                  <li>SCSS</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="card__side card__side--back card__side--back-1">
+              <div class="card__details">
+                <ul>
+                  <li>React</li>
+                  <li>Redux</li>
+                  <li>Next.js</li>
+                  <li>Responsive Web Design</li>
+                  <li>Material UI</li>
+                  <li>Bootstrap</li>
+                  <li>UX / UI</li>
+                  <li>Front-end Architecture</li>
+                  <li>RESTful APIs</li>
+                  <li>GraphQL</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--3">&nbsp;</div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--3"
+                  >Tools</span
+                >
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>Webpack</li>
+                  <li>Babel</li>
+                  <li>Git</li>
+                  <li>npm</li>
+                  <li>yarn</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-3">
+              <div class="card__details">
+                <ul>
+                  <li>AWS</li>
+                  <li>Firebase</li>
+                  <li>CI / CD</li>
+                  <li>Agile</li>
+                  <li>Scrum</li>
+                  <li>Kanban</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--2">&nbsp;</div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--2"
+                  >Back-End</span
+                >
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>Node.js</li>
+                  <li>Express.js</li>
+                  <li>Mongoose</li>
+                  <li>REST API</li>
+                  <li>MongoDB</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="card__side card__side--back card__side--back-2">
+              <div class="card__details">
+                <ul>
+                  <li>Data Structures</li>
+                  <li>Auth0</li>
+                  <li>OAuth</li>
+                  <li>TypeScript</li>
+                  <li>Jest</li>
+                  <li>Swagger UI</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </html>
